# a2a-samples

./: .gitignore  README.md
A2A Chat/: Info.plist  README.md  setup-app-registration.ps1  setup-app-registration.sh
A2A Chat/A2A Chat/: A2A_ChatApp.swift  Configuration.example.plist  ContentView.swift
A2A Chat/A2A Chat.xcodeproj/: project.pbxproj
A2A Chat/A2A Chat.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
A2A Chat/A2A Chat/Models/: ChatMessage.swift
A2A Chat/A2A Chat/Services/: A2AService.swift  AuthService.swift
A2A Chat/A2A Chat/Views/: ChatView.swift  MessageBubbleView.swift  WelcomeView.swift
A2A Chat/A2A ChatTests/: A2A_ChatTests.swift
A2A Chat/A2A ChatUITests/: A2A_ChatUITests.swift  A2A_ChatUITestsLaunchTests.swift
rust-cli/: Cargo.toml  README.md  setup-app-registration.ps1  setup-app-registration.sh
rust-cli/src/: a2a.rs  auth.rs  config.rs  main.rs
