[package]
name = "workiq-a2a"
version = "0.1.0"
edition = "2021"
description = "Work IQ A2A CLI — Interactive A2A sessions via WorkIQ"
license = "MIT"
readme = "README.md"

[dependencies]
a2a-rs-core = "1.0.4"
a2a-rs-client = "1.0.4"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
colored = "2"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures-util = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
anyhow = "1"
dirs = "5"
