[package]
name = "a2a-cli"
version = "0.1.0"
edition = "2021"
description = "A2A v0.3 CLI — Interactive A2A sessions"
license = "MIT"
readme = "README.md"

[dependencies]
a2a-rs-core = "1.0.14"
a2a-rs-client = "1.0.14"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures-util = "0.3"
anyhow = "1"
dirs = "5"
